# Cranimem

./: .gitignore  MANIFEST.in  README.md  example.env  pyproject.toml
cranimem/: config.py
cranimem/agent/: nodes.py  state.py  workflow.py
cranimem/cognitive/: gating.py  memory_ops.py  prompts.py
cranimem/core/: embedding.py  graph_store.py
cranimem/utils/: json_utils.py  llm_factory.py
eval/: hotpotqa_eval.py
